objects/companycam__CompanyCam_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>companycam__Auto_initiate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-initiate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>companycam__CityField__c</fullName>
        <label>City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__Name_Field__c</fullName>
        <label>Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__PostalCodeField__c</fullName>
        <label>PostalCode Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__ProjectID_Field__c</fullName>
        <label>CompanyCam Project ID Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__StateField__c</fullName>
        <label>State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__Street1Field__c</fullName>
        <label>Street 1 Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companycam__Street2Field__c</fullName>
        <label>Street 2 Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CompanyCam Mapping</label>
    <pluralLabel>CompanyCam Mappings</pluralLabel>
</CustomObject>